# predict-taxi-fare

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yaml
.dvc/: config
.github/workflows/: ci.yaml
data/interim/: cleaned_train_data.parquet.dvc
data/raw/test/: workflow_test_data.parquet.dvc
mlflow/: backend.db
notebooks/: experiment-01.ipynb  experiment-02.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/719581363477528207/: meta.yaml
notebooks/mlruns/719581363477528207/057503e72dc2476d83bb39f781d18fcb/: meta.yaml
notebooks/mlruns/719581363477528207/057503e72dc2476d83bb39f781d18fcb/metrics/: MAE  MAPE  RMSE
notebooks/mlruns/719581363477528207/057503e72dc2476d83bb39f781d18fcb/tags/: mlflow.log-model.history
notebooks/mlruns/719581363477528207/0e76080888b74807994fcfe26844509f/: meta.yaml
notebooks/mlruns/719581363477528207/0e76080888b74807994fcfe26844509f/metrics/: MAE  MAPE  RMSE
notebooks/mlruns/719581363477528207/0e76080888b74807994fcfe26844509f/tags/: mlflow.log-model.history
notebooks/mlruns/719581363477528207/107ac56037cd4902bf9cc76244436473/: meta.yaml
notebooks/mlruns/719581363477528207/107ac56037cd4902bf9cc76244436473/metrics/: MAE  MAPE  RMSE
notebooks/mlruns/719581363477528207/107ac56037cd4902bf9cc76244436473/tags/: mlflow.log-model.history
notebooks/mlruns/719581363477528207/176f11faa6874f2c9485ff798c9efdcf/: meta.yaml
notebooks/mlruns/719581363477528207/176f11faa6874f2c9485ff798c9efdcf/metrics/: MAE  MAPE  RMSE
notebooks/mlruns/719581363477528207/176f11faa6874f2c9485ff798c9efdcf/tags/: mlflow.log-model.history  mlflow.parentRunId
notebooks/mlruns/719581363477528207/483d8aff35b3441299b9d2e1f8b96798/: meta.yaml
notebooks/mlruns/719581363477528207/483d8aff35b3441299b9d2e1f8b96798/metrics/: MAE  MAPE  RMSE
notebooks/mlruns/719581363477528207/483d8aff35b3441299b9d2e1f8b96798/tags/: mlflow.log-model.history  mlflow.source.name
notebooks/mlruns/719581363477528207/5f26f474efb042208e917a37707fc68b/: meta.yaml
notebooks/mlruns/719581363477528207/63bb54e9993641d5906f093a4ec2cd67/: meta.yaml
notebooks/mlruns/719581363477528207/65e50703319449f68c7ba7ef15994502/: meta.yaml
notebooks/mlruns/719581363477528207/71d7b89cf42c49499489e2d1fe8c2afb/: meta.yaml
notebooks/mlruns/719581363477528207/75bbf344f41b4184868b50d34e44ac43/: meta.yaml
notebooks/mlruns/719581363477528207/7a9f62306ca840be8d4ecb65afdd2627/: meta.yaml
notebooks/mlruns/719581363477528207/ae45eb7aec484f6d909babcca97adf7d/: meta.yaml
notebooks/mlruns/719581363477528207/b94af18393ad4ed3ac0889940dc3f216/: meta.yaml
notebooks/mlruns/719581363477528207/cae5333269eb4e98be7b6cdd123d47c3/: meta.yaml
notebooks/mlruns/719581363477528207/cc8b6b099f284b18a6c659b09fb113f6/: meta.yaml
notebooks/mlruns/719581363477528207/cd4e7848c06f4e1682808a98ffc097bb/: meta.yaml
notebooks/mlruns/719581363477528207/d7726b2887d547e4a524c1e95a9d4dca/: meta.yaml
notebooks/mlruns/719581363477528207/ea035ce0bf0f4013b9a8eff733014ccc/: meta.yaml
notebooks/mlruns/719581363477528207/ec46bc031cc74111a5007082125eec4a/: meta.yaml
notebooks/mlruns/719581363477528207/f1a7158c14824e7bbc05568ecf02d487/: meta.yaml
notebooks/mlruns/719581363477528207/fe4d095e89264a848b0cc0a70caa296d/: meta.yaml
notebooks/mlruns/models/lgbm-reg-tuned/: meta.yaml
prefect/: nyc-taxis-production-deployment.yaml
reports/coverage/: d_14984549b1119165___init___py.html  d_3015f36a628a7af8___init___py.html  d_3015f36a628a7af8_conftest_py.html  d_7296e2658abd2e08___init___py.html  d_7296e2658abd2e08_test_clean_data_stage_py.html  d_7296e2658abd2e08_test_create_features_stage_py.html  d_7296e2658abd2e08_test_preprocess_data_stage_py.html  d_7296e2658abd2e08_test_read_data_stage_py.html  d_9a64464640ad1684___init___py.html  index.html  status.json
reports/outputs/: results.parquet.dvc  workflow_results.parquet.dvc
src/: logging.py  utils.py
src/__tests__/: conftest.py
src/__tests__/e2e/: test_predictions_router.py  test_root_router.py
src/__tests__/integration/: test_online_workflow.py
src/__tests__/unit/: test_clean_data_stage.py  test_create_features_stage.py  test_preprocess_data_stage.py  test_read_data_stage.py
src/api/: schemas.py  server.py
src/api/routes/: __init__.py  predictions_router.py  root_router.py
src/database/: data_ingestion.py  green_taxi_schema.py
src/pipeline/: __init__.py  batch_workflow.py  online_workflow.py  pipeline.py  workflow.py
src/pipeline/exceptions/: __init__.py  nyc_workflow_exception.py
src/pipeline/preprocessors/robust_scaler/: extra.joblib  mta_tax.joblib  tip_amount.joblib
src/pipeline/preprocessors/standard_scaler/: fare_amount.joblib  price_per_meter.joblib  tax_per_meter.joblib  tip_amount.joblib  total_amount_per_extra.joblib  trip_distance.joblib  trip_duration.joblib
src/pipeline/stages/: __init__.py  clean_data.py  create_features.py  mlflow_setup.py  persist_results.py  preprocess_data.py  read_data.py
(+361 files in other folders)
