[tool.poetry]
name = "predict-taxi-fare"
version = "0.1.0"
description = ""
authors = ["Gabriel Cenciati <gbrcenciati@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
rich = "^13.3.1"
python-dotenv = "^1.0.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
seaborn = "^0.12.2"
inflection = "^0.5.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
jupyterlab = "^3.6.1"
pyarrow = "^11.0.0"
dvc = "^2.45.1"
boruta = "^0.3"
llvmlite = "^0.39.1"
numba = "^0.56.4"
mlflow = "^2.2.0"
xgboost = "^1.7.4"
lightgbm = "^3.3.5"
hyperopt = "^0.2.7"
prefect = "^2.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = ["C0114", "C0116", "R0903"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-s",
    "--strict-config",
    "--strict-markers",
    "--cov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=90",
]
filterwarnings = ["error"]
testpaths = ["src/__tests__"]
markers = [
    "unit: unit tests.",
    "integration: integration tests.",
    "e2e: end-to-end tests."
]

[tool.coverage.run]
parallel = true
source = ["src/__tests__"]